# lexis

./: 72 - lexis - Wordnet - word stores.ipynb  README.md  setup.cfg
.github/workflows/: ci.yml
docsrc/: index.rst  table_of_contents.rst
docsrc/module_docs/: lexis.rst
lexis/: __init__.py
lexis/examples/: __init__.py  drawing_games.py
