[metadata]
name = lexis
version = 0.1.0
url = https://github.com/thorwhalen/lexis
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Wordnet wrapper - Easy access to words and their relationships
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		words
		definitions
		lexicon
		wordnet
		NLP
		Natural Language Processing
		text mining
display_name = lexis

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	i2
	dol
	nltk

